# ai-toolkit

./: .gitignore  pyproject.toml
extensions_built_in/sd_trainer/: SDTrainer.py
extensions_built_in/sd_trainer/config/: train.example.yaml
jobs/process/: BaseSDTrainProcess.py
scripts/: rewind_training_output.py
toolkit/: config_modules.py
toolkit/models/: flux_sage_attn.py
ui/: package-lock.json  package.json
ui/src/: types.ts
ui/src/app/jobs/new/: SimpleJob.tsx  jobConfig.ts
ui/src/components/: JobLossGraph.tsx  formInputs.tsx
ui/src/hooks/: useJobLossLog.tsx
