[project]
name = "ai-toolkit"
version = "1.0.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch==2.9.1",
    "torchvision==0.24.1",
    "torchaudio==2.9.1",
    "torchao==0.10.0",
    "safetensors>=0.7.0",
    "transformers==5.5.3",
    "lycoris-lora==1.8.3",
    "flatten-json>=0.1.14",
    "pyyaml>=6.0.3",
    "oyaml>=1.0",
    "tensorboard>=2.20.0",
    "kornia>=0.8.2",
    "invisible-watermark>=0.2.0",
    "einops>=0.8.2",
    "accelerate>=1.13.0",
    "toml>=0.10.2",
    "albumentations==1.4.15",
    "albucore==0.0.16",
    "pydantic>=2.13.1",
    "omegaconf>=2.3.0",
    "k-diffusion>=0.1.1.post1",
    "open-clip-torch>=3.3.0",
    "timm==1.0.22",
    "prodigyopt>=1.1.2",
    "controlnet-aux==0.0.10",
    "python-dotenv>=1.2.2",
    "bitsandbytes>=0.49.2",
    "hf-transfer>=0.1.9",
    "lpips>=0.1.4",
    "pytorch-fid>=0.3.0",
    "optimum-quanto==0.2.4",
    "sentencepiece>=0.2.1",
    "huggingface-hub==1.10.1",
    "peft==0.18.1",
    "gradio>=6.12.0",
    "python-slugify>=8.0.4",
    "opencv-python>=4.11.0.86",
    "pytorch-wavelets==1.3.0",
    "matplotlib==3.10.1",
    "setuptools==69.5.1",
    "av==16.0.1",
    "torchcodec==0.9.1",
    "librosa==0.11.0",
    "mutagen==1.47.0",
    "diffusers",
]

[tool.uv]
no-build-isolation-package = ["sageattention", "sageattention3-blackwell"]

[tool.uv.workspace]
members = [
    "SageAttention/sageattention3_blackwell",
    "SageAttention",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
triton = [{ index = "pytorch-cuda", marker = "sys_platform == 'linux'" },]
torch = [{ index = "pytorch-cuda", marker = "sys_platform == 'linux' and platform_machine != 'aarch64'" },]
torchvision = [{ index = "pytorch-cuda", marker = "sys_platform == 'linux' and platform_machine != 'aarch64'" },]
torchaudio = [{ index = "pytorch-cuda", marker = "sys_platform == 'linux' and platform_machine != 'aarch64'" },]
sageattention = { workspace = true }
sageattention3-blackwell = { workspace = true }
diffusers = { git = "https://github.com/huggingface/diffusers.git", rev = "dc8d9032171c83741fd37ed2b12bc9d8274464f3" }

